--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "自动上传图片到CloudFlare ImgBed并转换为无损WebP",
   "main": "main.js",
   "scripts": {
-    "build": "node esbuild.config.mjs",
-    "dev": "node esbuild.config.mjs --watch"
+    "build": "node .esbuild.config.mjs",
+    "dev": "node .esbuild.config.mjs --watch"
   },
   "devDependencies": {
     "@types/node": "^18.19.0",
